add link to codegen

--- a/codegen.html
+++ b/codegen.html
@@ -15,6 +15,12 @@
 	<script type="text/javascript" src="TangleKit/BVTouchable.js"></script>
 	<script type="text/javascript" src="TangleKit/TangleKit.js"></script>
 
+  <link rel="stylesheet" href="themes/prism.css" data-noprefix />
+  <script src="assets/vendor/prefixfree.min.js"></script>
+
+  <script>var _gaq = [['_setAccount', 'UA-33746269-1'], ['_trackPageview']];</script>
+  <script src="https://www.google-analytics.com/ga.js" async></script>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -50,18 +56,15 @@
           </div>
 
           <div id="code" class="" style="padding: 5%;"></div>
-          <div id="codestring" class="" style="padding: 5%;"></div>
+          <pre id="codestring" class="language-html line-numbers" style="padding: 5%;">
+          </pre>
 
           <div id = "final_prompt"></div>
 
-          <div class="text-center">
+          <!-- <div class="text-center">
             <button id="processImages" class="btn btn-primary" style="width: 30%;">Generate Image Descriptions</button>
           </div>
-          <div id="results" style="padding: 5%;"></div>
-
-          <div class="text-center" style="padding-top: 20px;">
-            <button id="go_to_audio2" class="btn btn-info" style="width: 30%;">Go to Audio2</button>
-        </div>
+          <div id="results" style="padding: 5%;"></div> -->
           
 
         </div>
